--- a/stack.yaml
+++ b/stack.yaml
@@ -1,4 +1,4 @@
-resolver: nightly-2023-07-10 # ghc-9.6.2
+resolver: lts-22.9 # ghc-9.6.4
 
 packages:
   - .
@@ -20,25 +20,15 @@ extra-deps:
 - retrie-1.2.2
 - hiedb-0.5.0.1
 - implicit-hie-0.1.4.0
-- hie-bios-0.13.1
 - lsp-2.4.0.0
 - lsp-test-0.17.0.0
 - lsp-types-2.1.1.0
-- attoparsec-aeson-2.1.0.0
-- hw-fingertree-0.1.2.1
-- integer-conversion-0.1.0.1
 - monad-dijkstra-0.1.1.4
-- hw-prim-0.6.3.2
-- optparse-applicative-0.17.1.0
 
 # stan and friends
 - stan-0.1.2.0
-- clay-0.14.0
-- colourista-0.1.0.2
 - dir-traverse-0.2.3.0
 - extensions-0.1.0.1
-- relude-1.2.1.0
-- slist-0.2.1.0
 - tomland-1.3.3.2
 - trial-0.0.0.0
 - trial-optparse-applicative-0.0.0.0
