Fix weird behavior of OPTIONS_GHC completions (fixes #3908) (#4031)

--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -761,7 +761,7 @@ common pragmas
     cpp-options: -Dhls_pragmas
 
 library hls-pragmas-plugin
-  import:           defaults, warnings
+  import:           defaults, pedantic, warnings
   exposed-modules:  Ide.Plugin.Pragmas
   hs-source-dirs:   plugins/hls-pragmas-plugin/src
   build-depends:
@@ -777,7 +777,7 @@ library hls-pragmas-plugin
     , containers
 
 test-suite hls-pragmas-plugin-tests
-  import:           defaults, test-defaults, warnings
+  import:           defaults, pedantic, test-defaults, warnings
   type:             exitcode-stdio-1.0
   hs-source-dirs:   plugins/hls-pragmas-plugin/test
   main-is:          Main.hs
