Fix -Wall in qualified imported names plugin

--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -921,7 +921,7 @@ common qualifyImportedNames
     cpp-options: -Dhls_qualifyImportedNames
 
 library hls-qualify-imported-names-plugin
-  import:             defaults, warnings
+  import:             defaults, pedantic, warnings
   exposed-modules:    Ide.Plugin.QualifyImportedNames
   hs-source-dirs:     plugins/hls-qualify-imported-names-plugin/src
   build-depends:
@@ -939,7 +939,7 @@ library hls-qualify-imported-names-plugin
     DataKinds
 
 test-suite hls-qualify-imported-names-plugin-tests
-  import:           defaults, test-defaults, warnings
+  import:           defaults, pedantic, test-defaults, warnings
   type:             exitcode-stdio-1.0
   hs-source-dirs:   plugins/hls-qualify-imported-names-plugin/test
   main-is:          Main.hs
