Fix -Wall in retrie plugin

--- a/haskell-language-server.cabal
+++ b/haskell-language-server.cabal
@@ -532,7 +532,7 @@ common retrie
     cpp-options: -Dhls_retrie
 
 library hls-retrie-plugin
-  import:             defaults, warnings
+  import:             defaults, pedantic, warnings
   exposed-modules:    Ide.Plugin.Retrie
   hs-source-dirs:     plugins/hls-retrie-plugin/src
   build-depends:
@@ -562,7 +562,7 @@ library hls-retrie-plugin
     DataKinds
 
 test-suite hls-retrie-plugin-tests
-  import:           defaults, test-defaults, warnings
+  import:           defaults, pedantic, test-defaults, warnings
   type:             exitcode-stdio-1.0
   hs-source-dirs:   plugins/hls-retrie-plugin/test
   main-is:          Main.hs
