--- a/bench/config.yaml
+++ b/bench/config.yaml
@@ -26,6 +26,7 @@ examples:
         # - src/Distribution/Simple.hs
         # - src/Distribution/Types/Module.hs
         - src/Distribution/Simple/Configure.hs
+        - src/Distribution/Simple/BuildTarget.hs
     extra-args: [] # extra HLS command line args
   # Small-sized project with TH
   - name: lsp-types
@@ -92,21 +93,21 @@ examples:
 
 # The set of experiments to execute
 experiments:
-    # - "edit-header"
-    # - "edit"
-    # - "hover"
+    - "edit-header"
+    - "edit"
+    - "hover"
     - "semanticTokens"
     # - "hover after edit"
     # - "hover after cradle edit"
-    # - "getDefinition"
-    # - "getDefinition after edit"
-    # - "completions"
-    # - "completions after edit"
-    # - "code actions"
-    # - "code actions after edit"
-    # - "code actions after cradle edit"
-    # - "documentSymbols after edit"
-    # - "hole fit suggestions"
+    - "getDefinition"
+    - "getDefinition after edit"
+    - "completions"
+    - "completions after edit"
+    - "code actions"
+    - "code actions after edit"
+    - "code actions after cradle edit"
+    - "documentSymbols after edit"
+    - "hole fit suggestions"
 
 # An ordered list of versions to analyze
 versions:
